[KM-00] #BUGFIX 'priotiirty:critical' {Fix duplicate entry error in PermissionDO.}
