# server/src/main/java/org/europa/together/application/acl/PermissionHbmDAO.java
@@ -5,6 +5,7 @@ import jakarta.persistence.TypedQuery;
 import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
 import jakarta.persistence.criteria.ParameterExpression;
+import jakarta.persistence.criteria.Predicate;
 import jakarta.persistence.criteria.Root;
 import org.europa.together.application.GenericHbmDAO;
 import org.europa.together.application.LogbackLogger;
@@ -12,7 +13,7 @@ import org.europa.together.business.Logger;
 import org.europa.together.business.acl.PermissionDAO;
 import org.europa.together.domain.LogLevel;
 import org.europa.together.domain.acl.PermissionDO;
-import org.europa.together.domain.acl.PermissionId;
+import org.europa.together.domain.acl.ResourcesDO;
 import org.europa.together.domain.acl.RolesDO;
 import org.springframework.stereotype.Repository;
 import org.springframework.transaction.annotation.Transactional;
@@ -22,7 +23,7 @@ import org.springframework.transaction.annotation.Transactional;
  */
 @Repository
 @Transactional
-public class PermissionHbmDAO extends GenericHbmDAO<PermissionDO, PermissionId>
+public class PermissionHbmDAO extends GenericHbmDAO<PermissionDO, String>
         implements PermissionDAO {
 
     private static final long serialVersionUID = 3L;
@@ -56,6 +57,28 @@ public class PermissionHbmDAO extends GenericHbmDAO<PermissionDO, PermissionId>
     }
 
     @Override
+    public PermissionDO find(final String roleName, final String resource,
+            final String view) {
+        PermissionDO entry;
+
+        ResourcesDO item = new ResourcesDO();
+        item.setName(resource);
+        item.setView(view);
+
+        CriteriaBuilder builder = mainEntityManagerFactory.getCriteriaBuilder();
+        CriteriaQuery<PermissionDO> query = builder.createQuery(PermissionDO.class);
+        // create Criteria
+        Root<PermissionDO> root = query.from(PermissionDO.class);
+        Predicate _role = builder.equal(root.get("role"), new RolesDO(roleName));
+        Predicate _resource = builder.equal(root.get("resource"), item);
+        Predicate match = builder.and(_role, _resource);
+        query.where(match);
+
+        entry = mainEntityManagerFactory.createQuery(query).getSingleResult();
+        return entry;
+    }
+
+    @Override
     @Transactional(readOnly = true)
     //TODO: pagination
     public List<PermissionDO> listRolePermissions(final String roleName) {
@@ -64,7 +87,7 @@ public class PermissionHbmDAO extends GenericHbmDAO<PermissionDO, PermissionId>
         CriteriaQuery<PermissionDO> query = builder.createQuery(PermissionDO.class);
         // create Criteria
         Root<PermissionDO> root = query.from(PermissionDO.class);
-        query.where(builder.equal(root.get("permissionId").get("role"), new RolesDO(roleName)));
+        query.where(builder.equal(root.get("role"), new RolesDO(roleName)));
         query.orderBy(builder.asc(root.get("uuid")));
 
         return mainEntityManagerFactory.createQuery(query).getResultList();
